Migrate to unbuild

--- a/examples/local/index.html
+++ b/examples/local/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>country-flag-emoji-polyfill</title>
 <script type="module" defer>
-import { polyfillCountryFlagEmojis } from "../../dist/index.module.js";
+import { polyfillCountryFlagEmojis } from "../../dist/index.mjs";
 polyfillCountryFlagEmojis();
 </script>
 <style>
